--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,50 @@
+astroid==3.3.10
 bidict==0.23.1
+black==25.1.0
 blinker==1.9.0
 click==8.2.1
 colorama==0.4.6
+coverage==7.9.2
+dill==0.4.0
 dnspython==2.7.0
 eventlet==0.40.0
+flake8==7.3.0
 Flask==3.1.1
 Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.2
+gunicorn==23.0.0
 h11==0.16.0
+iniconfig==2.1.0
+isort==6.0.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+mccabe==0.7.0
+mypy_extensions==1.1.0
 networkx==3.4.2
+packaging==25.0
+pathspec==0.12.1
+platformdirs==4.3.8
+pluggy==1.6.0
 psycopg2-binary==2.9.10
+pycodestyle==2.14.0
+pyflakes==3.4.0
+Pygments==2.19.2
+pylint==3.3.7
+pytest==8.4.1
+pytest-cov==6.2.1
+pytest-flask==1.3.0
+pytest-mock==3.14.1
+pytest-socket==0.7.0
 python-dotenv==1.1.0
 python-engineio==4.12.1
 python-socketio==5.13.0
+ruff==0.12.3
 simple-websocket==1.1.0
 SQLAlchemy==2.0.41
+tomlkit==0.13.3
+types-Flask-SocketIO==5.5.0.20250516
 typing_extensions==4.13.2
 Werkzeug==3.1.3
 wsproto==1.2.0
-
-# Development tools
-black
-ruff
-gunicorn
-
-# Testing dependencies
-pytest
-pytest-flask
-pytest-socket
-pytest-cov
-pytest-mock
